# neuralC

./: .gitignore  CMakeLists.txt  Layer.cxx  Layer.h  NeuralNet.cxx  NeuralNet.h  README.md  compile.C  main.cpp  perceptron.cxx  perceptron.h  run_dataset.cxx  run_plot.cxx  run_xray.cxx
NeuralAnalyzer/: NeuralAnalyzer.cxx  NeuralAnalyzer.h
tests/: netTest.cxx
